--- a/index.html
+++ b/index.html
@@ -21,17 +21,14 @@
         <div class="explain">
             <p>Criptografe seu código em C, de forma simples e rápida.
                 <ul>
-                    <li>Este site gera um código criptografado e uma biblioteca para o código funcionar.
-                    </li>
-                    <li>Este site <strong>não</strong> é um compilador, se o código fonte estiver com erros, você não
-                        será avisado</li>
+                    <li>Este site gera um código criptografado e uma biblioteca para o código funcionar.</li>
+                    <li>Este site <strong>não</strong> é um compilador, se o código fonte estiver com erros, você não será avisado</li>
                 </ul>
             </p>
         </div>
         <div class="textareas">
             <div id="left">
-                <p class="super-text">Cole seu código na caixa de texto abaixo ou <a href="#"><label id="upload" for="uploadFile">dê
-                            upload do arquivo</label></a></p>
+                <p class="super-text">Cole seu código na caixa de texto abaixo ou <a href="#"><label id="upload" for="uploadFile">dê upload do arquivo</label></a></p>
                 <div class="textarea-title">
                     <p class="super-textarea">Entrada</p>
                 </div>
